--- a/main.css
+++ b/main.css
@@ -481,7 +481,7 @@ header:hover{
 }
 
 .con11{
-  background-image: url(./modernTech.JPG);
+  background-image: url(./modernTech.jpg);
   border-style: none;
   border-radius: 1mm;
   background-position: center;
