--- a/main.css
+++ b/main.css
@@ -478,6 +478,15 @@ header:hover{
   background-position: left;
   width: 95%;
   box-shadow: 0mm 0mm 4mm #1a1a1a;
+  -webkit-transition-duration: 1.1s; /* Safari */
+  transition-duration: 1.0s;
+}.con10:hover{
+  background-image: url(./css.jpg);
+  border-style: none;
+  border-radius: 1mm;
+  background-position: right;
+  width: 95%;
+  box-shadow: 0mm 0mm 4mm #1a1a1a;
 }
 
 .con11{
@@ -487,8 +496,16 @@ header:hover{
   background-position: center;
   width: 95%;
   box-shadow: 0mm 0mm 4mm #1a1a1a;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 1.1s; /* Safari */
+  transition-duration: 1.0s;
+}.con11:hover{
+  background-image: url(./modernTech.jpg);
+  border-style: none;
+  border-radius: 1mm;
+  background-position: center;
+  background-position: left;
+  width: 95%;
+  box-shadow: 0mm 0mm 4mm #1a1a1a;
 }
 .con12{
   background-image: url(./homeoffice.jpg);
@@ -497,6 +514,15 @@ header:hover{
   background-position: center;
   width: 95%;
   box-shadow: 0mm 0mm 4mm #1a1a1a;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 1.1s; /* Safari */
+  transition-duration: 1.0s;
+}.con12:hover{
+  background-image: url(./homeoffice.jpg);
+  border-style: none;
+  border-radius: 1mm;
+  background-position: left;
+  width: 95%;
+  box-shadow: 0mm 0mm 4mm #1a1a1a;
+  -webkit-transition-duration: 1.1s; /* Safari */
+  transition-duration: 1.0s;
 }
