--- a/main.css
+++ b/main.css
@@ -476,7 +476,7 @@ header:hover{
 .con9{
   background-image: url(./header.JPG);
   background-size: cover;
-  
+
   border-style: none;
   border-radius: 1mm;
   background-position: center;
@@ -539,4 +539,24 @@ header:hover{
   box-shadow: 0mm 0mm 4mm #1a1a1a;
   -webkit-transition-duration: 1.1s; /* Safari */
   transition-duration: 1.0s;
+}
+.con13{
+  background-image: url(./con13.jpg);
+  border-style: none;
+  background-size: cover;
+  border-radius: 1mm;
+  background-position: center;
+  width: 95%;
+  box-shadow: 0mm 0mm 4mm #1a1a1a;
+  -webkit-transition-duration: 1.1s; /* Safari */
+  transition-duration: 1.0s;
+}.con13:hover{
+  background-image: url(./con13.jpg);
+  border-style: none;
+  background-size: cover;
+  border-radius: 1mm;
+  background-position: top;
+  width: 95%;
+  box-shadow: 0mm 0mm 4mm #1a1a1a;
+
 }
