--- a/main.css
+++ b/main.css
@@ -239,6 +239,14 @@ padding: 5mm;
 }
 li{
 height: auto;
+background-color: #D2DADD;
+border-style: none;
+border-radius: 1mm;
+background-position: center;
+width: 95%;
+box-shadow: 0mm 0mm 4mm #1a1a1a;
+-webkit-transition-duration: 1.1s; /* Safari */
+transition-duration: 1.0s;
 }
 
 
