--- a/main.css
+++ b/main.css
@@ -501,8 +501,9 @@ header:hover{
   transition-duration: 1.0s;
 }
 .con10{
-  background-image: url(./css.jpg);
+  background-image: url(./code.jpg);
   border-style: none;
+  background-size: cover;
   border-radius: 1mm;
   background-position: left;
   width: 95%;
@@ -510,10 +511,11 @@ header:hover{
   -webkit-transition-duration: 1.1s; /* Safari */
   transition-duration: 1.0s;
 }.con10:hover{
-  background-image: url(./css.jpg);
+  background-image: url(./code.jpg);
   border-style: none;
+  background-size: cover;
   border-radius: 1mm;
-  background-position: right;
+  background-position: top;
   width: 95%;
   box-shadow: 0mm 0mm 4mm #1a1a1a;
 }
