--- a/main.css
+++ b/main.css
@@ -500,6 +500,14 @@ header:hover{
   text-decoration-color: #64878D;
 
 }
+ul{
+list-style-type: none;
+column-count: 2;
+padding: 5mm;
+}
+li{
+height: auto;
+}
 .con9{
   background-image: url(./header.JPG);
   background-size: cover;
@@ -585,6 +593,26 @@ header:hover{
   background-size: cover;
   border-radius: 1mm;
   background-position: top;
+  width: 95%;
+  box-shadow: 0mm 0mm 4mm #1a1a1a;
+
+}
+.con14{
+  background-image: url(https://courses.wavedm.net/img/biblestudy.jpg);
+  border-style: none;
+  background-size: cover;
+  border-radius: 1mm;
+  background-position: center;
+  width: 95%;
+  box-shadow: 0mm 0mm 4mm #1a1a1a;
+  -webkit-transition-duration: 1.1s; /* Safari */
+  transition-duration: 1.0s;
+}.con14:hover{
+  background-image: url(https://courses.wavedm.net/img/biblestudy.jpg);
+  border-style: none;
+  background-size: cover;
+  border-radius: 1mm;
+  background-position: bottom;
   width: 95%;
   box-shadow: 0mm 0mm 4mm #1a1a1a;
 
