Fixed links, reordered a few things

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1093,6 +1093,14 @@ section.lazy-placeholder:after {
   padding-bottom: 105px;
   background-image: url("../../../assets/images/earth-864x575.jpg");
 }
+.cid-rV7PFUzpNI {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #1a1a1a;
+}
+.cid-rV7PFUzpNI H1 {
+  text-align: left;
+}
 .cid-rUtJuYdUaR {
   padding-top: 60px;
   padding-bottom: 60px;
