--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1101,6 +1101,14 @@ section.lazy-placeholder:after {
 .cid-rV7PFUzpNI H1 {
   text-align: left;
 }
+.cid-rVkFCCriri {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/videogaming-2000x1333.jpg");
+}
+.cid-rVkFCCriri H1 {
+  text-align: left;
+}
 .cid-rUtJuYdUaR {
   padding-top: 60px;
   padding-bottom: 60px;
