Added WDM Contributors

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1109,6 +1109,14 @@ section.lazy-placeholder:after {
 .cid-rVkFCCriri H1 {
   text-align: left;
 }
+.cid-rVDZK5S2GS {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ab9776;
+}
+.cid-rVDZK5S2GS H1 {
+  text-align: left;
+}
 .cid-rVACDlvKy4 {
   padding-top: 60px;
   padding-bottom: 60px;
