--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1133,7 +1133,7 @@ section.lazy-placeholder:after {
 }
 .cid-rVACDlvKy4 .btn-social,
 .cid-rVACDlvKy4 .mbr-section-title {
-  color: #57468b;
+  color: #1a1a1a;
 }
 .cid-rVACDlvKy4 .soc-item {
   width: 45px;
@@ -1154,10 +1154,6 @@ section.lazy-placeholder:after {
 }
 .cid-rVACDlvKy4 .soc-item:hover span {
   color: #ab9776 !important;
-}
-.cid-rVACDlvKy4 .btn-social,
-.cid-rVACDlvKy4 .mbr-section-title {
-  color: #1a1a1a;
 }
 .cid-rSOBifUwRw {
   background-image: url("../../../assets/images/homeoffice-1920x1280.jpg");
@@ -2872,6 +2868,18 @@ section.lazy-placeholder:after {
   .cid-rUtPCfGmId img {
     width: 100%!important;
   }
+}
+#custom-html-24 {
+  /* Type valid CSS here */
+}
+#custom-html-24 div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-24 p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-rUu5FiR0Oy .dropdown-item:before {
   font-family: MobiriseIcons !important;
